@@ -99,16 +99,21 @@ class coverage(object):
         # 1: defaults:
         self.config = CoverageConfig()
 
-        # 2: from the coveragerc file:
+        # 2: from the .coveragerc or setup.cfg file:
         if config_file:
+            did_read_rc = should_read_setupcfg = False
             if config_file is True:
                 config_file = ".coveragerc"
+                should_read_setupcfg = True
             try:
-                self.config.from_file(config_file)
+                did_read_rc = self.config.from_file(config_file)
             except ValueError as err:
                 raise CoverageException(
                     "Couldn't read config file %s: %s" % (config_file, err)
                     )
+
+            if not did_read_rc and should_read_setupcfg:
+                self.config.from_file("setup.cfg", section_prefix="coverage:")
 
         # 3: from environment variables:
         self.config.from_environment('COVERAGE_OPTIONS')
